[package]
name = "wsbroad"
description = "[nightly-only] Websocket server that broadcasts each message to other clients connected to the same URL"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
keywords = ["websocket", "websockets", "rfc6455", "broadcast", "nightly"]
repository = "https://github.com/vi/wsbroad"
categories = ["command-line-utilities", "network-programming", "web-programming", "web-programming::websocket"]
license = "MIT/Apache-2.0"

[dependencies]
futures-await = { version = "0.1" }
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
websocket = { version = "0.20", default-features = false, features = ["async"]}
#take_mut = "0.2"
compactmap = "0.3"
