[package]
name = "wsbroad"
description = "Websocket server that broadcasts each message to other clients connected to the same URL"
version = "0.2.2"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
keywords = ["websocket", "websockets", "rfc6455", "broadcast", "nightly"]
repository = "https://github.com/vi/wsbroad"
categories = ["command-line-utilities", "network-programming", "web-programming", "web-programming::websocket"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.36"
futures = "0.3.8"
slab = "0.4.2"
tokio = {version = "1", features=["net","rt","macros","sync"]}
tokio-tungstenite = "0.17"
tungstenite = {version="0.17", default_features=false}
